# psc-plot

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  set_data_dir.sh  set_data_path.sh
.github/workflows/: format.yml  regenerate-baselines.yml  test.yml
src/: main.py
src/lib/: __init__.py  animation.py  bp_util.py  cli.py  config.py  data_source.py  dimension.py  field_loader.py  field_source.py  field_units.py  field_util.py  file_util.py  h5_util.py  has_name_fragments.py  latex.py  particle_util.py  plt_util.py  scale.py  species.py  var_info.py  var_info_registry.py  xr_util.py
src/lib/adaptors/: __init__.py  adaptor.py  adaptor_base.py  pipeline.py  registry.py
src/lib/animation/: __init__.py  animated_plot.py  animation_base.py  animation_bp.py  animation_h5.py  field_animation.py  get_plot.py  particle_animation.py  plot.py
src/lib/data/: adaptor.py  compatability.py  compile.py  data_source.py  data_util.py  data_with_attrs.py  data_world.py  field_loader.py  keys.py  loader.py  loader_registry.py  node.py  particle_loader.py  pipeline.py  plot_target.py  source.py
src/lib/derived_field_variables/: __init__.py  derived_field_variable.py  register_derived_field_variables.py  registry.py
tests/: conftest.py  synthetic_particles.py  test_dask_graph.py  test_h5_species_discovery.py  test_idx_efficient.py  test_memory.py  test_particle_bp.py  test_particle_bp_perf.py  test_particle_bp_vs_h5.py  test_plots.py  test_save.py  test_save_filename.py  test_species.py  test_species_discovery.py  test_synthetic_particles.py  test_synthetic_particles_bp.py
(+500 files in other folders)
